--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^^18.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tech-stack-icons": "^2.1.0",
